public/stylesheets/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
    padding-left: 100px;
}

.main_header {
    background-color: #d14414;
}

#header {
    height: 80px;
}

.mainImage {
    margin: 20px auto 0 auto;
    display: block;
}

.sliderImage {
    padding-top: 10px;
}

nav .brand-logo,
.teacherHeaderImage {
    padding-left: 30px;
}

.side-nav,
nav {
    background-color: #d14414;
}

.registration {
    margin-top: 50px;
}


/*button styling*/

.btn,
.btn:focus {
    background-color: #d14414;
    margin-right: 30px;
}

.btn:hover {
    background-color: #707372;
}

#progressButton,
#observationButton {
    margin-right: 0;
}

/*Range field and slider styling*/

.range-field {
    width: 400px;
}

.thumb {
    background-color: #d14414 !important;
}

input[type=range] {
    background-color: #d14414 !important;
}

/*media="screen, projection"*/
input[type=range] + .thumb .value {
    color: #d14414;
}

input[type=range] {
    background-color: #d14414;
    color: #d14414;
}



/*.thumb {*/
    /*background-color: #d14414;*/
/*}*/

input[type=range]::-webkit-slider-thumb {
    background: #d14414;
}

input[type=range]::-moz-range-thumb {
    background: #d14414;
}

input[type=range]::-ms-thumb {
    background: #d14414;
}

.thumb {
    background-color: #d14414 !important;
}

/*side-nav styling*/
.observationMenu,
#slide-out {
    background-color: #707372;
    color: white;
}

.side-nav.fixed a,
.side-nav a {
    color: white;
}

#header {
    background-color: #d14414;
}

.nav-mobile,
.progress-monitoring {
    background-color: #707372;
}


.topLi {
    height: 80px;
}

input[type=text]:focus:not([readonly]),
input[type=password]:focus:not([readonly]),
input[type=email]:focus:not([readonly]),
input[type=url]:focus:not([readonly]),
input[type=time]:focus:not([readonly]),
input[type=date]:focus:not([readonly]),
input[type=datetime-local]:focus:not([readonly]),
input[type=tel]:focus:not([readonly]),
input[type=number]:focus:not([readonly]),
input[type=search]:focus:not([readonly]),
textarea.materialize-textarea:focus:not([readonly]) {
    border-bottom: 1px solid #d14414;
    box-shadow: 0 1px 0 0 #d14414;
}

.input-field label.active,
.input-field label.focus {
    color: #d14414;
}

/* label color */
.input-field label {
    color: #d14414;
}

/* label focus color */
.input-field input[type=text]:focus + label,
.input-field input[type=date]:focus + label,
.input-field input[type=range]:focus + label,
.input-field input[type=password]:focus + label,
.input-field input[type=email]:focus + label {
    color: #d14414;
}

/* label underline focus color */
.input-field input[type=text]:focus,
.input-field input[type=date]:focus,
.input-field input[type=range]:focus,
.input-field input[type=password]:focus,
.input-field input[type=email]:focus {
    border-bottom: 1px solid #707372;
    box-shadow: 0 1px 0 0 #707372;
}

/* valid color */
.input-field input[type=text].valid,
.input-field input[type=date].valid,
.input-field input[type=password].valid,
.input-field input[type=email].valid {
    border-bottom: 1px solid #707372;
    box-shadow: 0 1px 0 0 #707372;
}

/* invalid color */
.input-field input[type=text].invalid,
.input-field input[type=date].invalid,
.input-field input[type=password].invalid,
.input-field input[type=email].invalid {
    border-bottom: 1px solid #707372;
    box-shadow: 0 1px 0 0 #707372;
}

/* icon prefix focus color */
.input-field .prefix.active {
    color: #000;
}

/*.thumb {*/
    /*background-color: #d14414 !important;*/
/*}*/

/*input[type=range],*/
input[type=date] {
    background-color: #d14414 !important;
}

/*media="screen, projection"*/
/*input[type=range] + .thumb .value {*/
    /*color: #d14414;*/
/*}*/

/*input[type=range] {*/
    /*background-color: #d14414;*/
    /*color: #d14414;*/
/*}*/

/*.thumb {*/
    /*background-color: #d14414;*/
/*}*/

/*options menu font color*/
.dropdown-content li > a, .dropdown-content li > span {
    color: #707372;
}

header, footer {
    padding-left: 240px;
}

.noPadding {
    padding-left: 0;
}

/*Date picker styling*/
.picker__date-display,
.picker__weekday-display,
.picker__close,
.picker__today {
    background-color: #d14414;
}

.picker__close,
.picker__today {
    color: white;
}

.picker__day.picker__day--today {
    color: #d14414;
}

.picker__day--selected,
.picker__day--selected:hover,
.picker--focused .picker__day--selected {
    background-color: #d14414;
}

.picker__nav--next:hover,
.picker__nav--prev:hover {
    background-color: #d14414;
    opacity: 0.75;

}

th {
    color: #707372;
}
/*switch*/
.switch label input[type=checkbox]:checked + .lever,
.switch label input[type=checkbox]:checked + .lever:after {
    background-color: #d14414;
}

/*Radio Buttons*/

[type="radio"].with-gap:checked + label:before {
    border: 2px solid #d14414;
}

[type="radio"].with-gap:checked + label:after {
    border: 2px solid #d14414;
    background-color: #d14414;
}

/*Slider Styling*/

input[type=range] {
    background-color: white;
    color: #d14414;
}

/*input[type=range], input[type=date] {*/
/*background-color: #d14414 !important; */
/*}*/

@media only screen and (max-width: 992px) {
    header, main, footer {
        padding-left: 0;
    }
}

@media only screen and (max-width: 825px) {
    table {
        margin-top: 30px;
    }
}

@media only screen and (max-width: 600px) {
    .addStudentForm {
        margin-top: 20px;

    }
}

/*media="screen, projection"*/
@media only screen and (min-width: 990px) {
    nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
        height: 0px;
        line-height: 64px;
    }
}


#registerMessage {
    padding-left: 20px;
    color: #F00;
}

h4 {
    border-bottom: 1px solid #707372;
    color: #707372;
    margin-top: 50px;
    text-align: left;
}

h5 {
    color: #707372;
    margin-top: 0;
}

/*Table stylings*/

.tableFooter {
    font-weight: bold;
}

.sliderTable,
.radioTable {
    border-top: 1px solid #707372;
    margin-top: 30px;
    padding-top: 30px;
}

/*Styling dropdown menus on View Data Pages*/

.dropdown-button {
    background-color: #707372;
}

.dropdown-button {
    padding: 0 0 0 30px;
    width: 200px;
}

#getDatabtn {
    width: 200px;
    background-color: #d14414;
}

#selectTeacherBtn {
    margin-top: 20px;
}



/*Tabs styling*/

.tabs .tab a {
    color: #d14414;
}

.tabs .tab a:hover {
    color: #707372;
}

.tabs .indicator  {
    background-color: #d14414;
    color: #d14414;
}

/*modal trigger*/

.material-icons {
    background-color: #d14414;
}

#registerMessage {
    padding-left: 20px;
    color: #F00;
}

